--- a/index.html
+++ b/index.html
@@ -73,33 +73,24 @@
             <div>
                 <i class="fa-solid fa-cloud"></i>
                 <h2>Connecting Things</h2>
-                <p>I meticulously addressed IoT security challenges, recognizing unique vulnerabilities in interconnected devices. 
-                    This led to thorough threat modeling activities, scrutinizing IoT systems at physical, communication, and application layers. 
-                    Using Kali Linux tools, I actively identified and assessed risks, applying comprehensive frameworks to formulate strategic recommendations for threat mitigation. 
-                    My expertise extends to understanding the dynamic impact of emerging technologies on IoT security, emphasizing the need for continuous adaptation and innovation. 
-                    These experiences position me as a proficient professional in devising and implementing robust security measures within the evolving IoT landscape.</p>
+                <p> In my first experience, I used Arduino microcontrollers, sensors, and actuators to prototype an IoT solution, detecting specific conditions and configuring actuators accordingly. 
+                    In the second project, I employed Python, Cisco PL-App, and Raspberry Pi to streamline an IoT solution, utilizing Raspberry Pi as the main platform, implementing Python for data management and analysis, and employing Cisco PL-App for network management.</p>
                    <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-shield-halved"></i>
                 <h2>IoT Security</h2>
-                <p>Embarking on my Cisco educational journey, I immersed myself in IoT security, articulating specific challenges. 
-                    This led to meticulous threat modeling, examining IoT systems at various layers to pinpoint vulnerabilities. 
-                    With Kali Linux tools, I adeptly identified security risks within IoT frameworks. 
-                    Applying threat modeling and risk assessment, I not only identified threats but also recommended robust mitigation measures. 
-                    My exploration extended to understanding the impact of emerging technologies on IoT security, positioning me at the forefront of adapting security measures to evolving threats. 
-                    These experiences fortified my expertise in securing IoT ecosystems effectively.</p>
+                <p>In my prior experiences, I conducted comprehensive threat modeling for IoT systems, thoroughly addressing potential vulnerabilities across physical, communication, and application layers. 
+                    I employed Kali Linux penetration testing tools to systematically identify and mitigate security risks, showcasing my proficiency in ensuring robust security measures for IoT infrastructures through thorough analysis and testing.</p>
                    <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-database"></i>
                 <h2>Big Data & Analytics</h2>
-                <p>During my time at Cisco Networking Academy, I gained insights into the transformative role of data analytics in IoT solutions. 
-                    Recognizing the value it brings, I delved into the intricacies of data analysis, utilizing Python for collecting, preparing, analyzing, and visualizing data. 
-                    Venturing into machine learning, I applied algorithms for meaningful insights from complex datasets. 
-                    Proficiency in data visualization and storytelling facilitated effective communication of results to diverse audiences. 
-                    Exploring data management, I grasped both SQL and No-SQL solutions, and delving into Big Data platforms provided a holistic perspective. 
-                    These experiences enhanced my expertise in leveraging data analytics for informed decision-making in dynamic IoT ecosystems, positioning me as a skilled professional in the field.</p>
+                <p>In my data-centric endeavors, I adeptly utilize Python scripts to orchestrate a comprehensive workflow that spans data collection, preparation, analysis, and visualization or exportation. 
+                    This proficiency allows me to seamlessly navigate through the intricacies of diverse datasets. Furthermore, I integrate basic machine learning algorithms into my analytical toolkit, enabling the extraction of deeper insights from the data. 
+                    To enhance the communicative impact of my analyses, I employ advanced data visualization techniques and storytelling methods. 
+                    This comprehensive approach ensures not only the extraction of meaningful patterns and trends but also the effective communication of these findings through compelling visualizations and narratives.</p>
                    <a href="#">Learn more</a>
             </div>
         </div>
