--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div>
                 <i class="fa-solid fa-cloud"></i>
                 <h2>Connecting Things</h2>
-                <p> In my first experience, I used Arduino microcontrollers, sensors, and actuators to prototype an IoT solution, detecting specific conditions and configuring actuators accordingly. 
+                <p>In my first experience, I used Arduino microcontrollers, sensors, and actuators to prototype an IoT solution, detecting specific conditions and configuring actuators accordingly. 
                     In the second project, I employed Python, Cisco PL-App, and Raspberry Pi to streamline an IoT solution, utilizing Raspberry Pi as the main platform, implementing Python for data management and analysis, and employing Cisco PL-App for network management.</p>
                    <a href="#">Learn more</a>
             </div>
@@ -106,7 +106,7 @@
                 <div class="layer">
                     <h3>Smart Garage Monitoring</h3>
                     <p>Smart Garage Prototype with Node-RED and mySQL Integration </p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/pondadims/Smart-Garage-Nodered"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -114,7 +114,7 @@
                 <div class="layer">
                     <h3>IoT Gates Residence</h3>
                     <p>Implementation of Iot in a Residence gate access </p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/pondadims/IOT-GATES-RESIDENCE"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -130,10 +130,10 @@
                 <p><i class="fa-solid fa-paper-plane"></i>alfondadims123@gmail.com</p>
                 <p><i class="fa-solid fa-phone-volume"></i>088292125820</p>
                 <div class="social-icons">
-                    <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://github.com/pondadims"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.instagram.com/alfondadim?igsh=MTRxdmZxNTZucTltaQ%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://discordapp.com/users/713002697116090421"><i class="fa-brands fa-discord"></i></a>
                 </div>
                 <a href="images/Sertifikat.pdf" download class="btn btn2">My Certificate</a>
             </div>
